--- a/estilo.css
+++ b/estilo.css
@@ -1,46 +1,52 @@
 @media(max-width: 414px) {
-    body {
-        background-color: rgba(0, 0, 0, 0.05);
+    * {
+        box-sizing: border-box;
     }
 
     .titulo {
-        width:100%;
+        width: 100vw;
         height: 20vw;
         display: flex;
         justify-content: space-between;
-        Fill: Solid;
-        background-color: #FFFFFF;
+        /*background-color: #FFFFFF;*/
+        background-color: pink;
         filter: drop-shadow(0px, 4px);
         border-radius: 6px;
-        position:fixed;
-   
+        position: fixed;
+        top: 0;
+        box-shadow: black;
+        margin-bottom: 2px;
+
     }
 
     .titulo>ion-icon {
         width: 12vw;
         height: 12vw;
         padding: 2vw;
+
     }
 
     img {
-        width: 20vw;
-        height: 15vw;
+        width: 25vw;
+        height: 20vw;
         padding: 2vw;
     }
 
     .rodape {
         height: 15vw;
         width: 100%;
-        position:fixed;
+        position: fixed;
         bottom: 0;
 
         display: flex;
         justify-content: space-between;
-        
+
         background-color: #FFFFFF;
     }
 
     .rodape>ion-icon {
+        position: fixed;
+        right: 0;
         padding: 5vw;
         width: 8vw;
         height: 7vw;
@@ -49,4 +55,61 @@
     .rodape>p {
         padding: 5vw;
     }
+
+    .mensagem {
+        margin-top: 25vw;
+    }
+
+    .mensagem-status {
+        height: 12vw;
+        background-color: blue;
+        border-radius: .5vw;
+        fill: solid;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .mensagem-reservada {
+        height: 15vw;
+        /* background-color: #ffffff;*/
+        margin-top: 2vw;
+        background-color: black;
+        fill: solid;
+        border-radius: .5vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .ocultar {
+        visibility: hidden;
+    }
+
+    .container {
+        background-color: rgba(0, 0, 0, 0.05);
+    }
+
+    .apresentacao {
+        width: auto;
+        height: 180vw;
+        justify-content: space-between;
+        background-color: #FFFFFF;
+    }
+
+    button {
+        width: 20vw;
+        height: 10vw;
+    }
+
+    .apresentacao>img {
+        width: 30vw;
+        height: 30vw;
+    }
+
+    .rodape>input {
+        width: 100%;
+    }
+
+
 }
