--- a/estilo.css
+++ b/estilo.css
@@ -1,10 +1,10 @@
-
 @media(max-width: 414px) {
     * {
         box-sizing: border-box;
     }
-    body{
-       background-color: #E5E5E5;
+
+    body {
+        background-color: #E5E5E5;
     }
 
     .titulo {
@@ -67,19 +67,29 @@
         background-color: #DCDCDC;
         border-radius: .5vw;
         fill: solid;
-        padding: 3vw 3vw 2vw 25vw;
+        padding: 3vw 3vw 2vw 2vw;
         display: flex;
+    }
+
+    .mensagem-normal {
+        border-radius: .5vw;
+        fill: solid;
+        margin-top: 3vw;
+        padding: 3vw 3vw 2vw 2vw;
+        display: flex;
+        background-color: #FFFFFF;
+        height: 12vw;
     }
 
     .mensagem-reservada {
         height: 15vw;
-        background-color: #ffffff;
+        background-color: #FFDEDE;
         margin-top: 3vw;
         fill: solid;
         border-radius: .5vw;
         display: flex;
-        justify-content: center;
-        align-items: center;
+        padding: 3vw 3vw 2vw 2vw;
+
     }
 
     .ocultar {
@@ -109,6 +119,30 @@
 
     .rodape>input {
         width: 100%;
+    }
+
+    .apresentacao {
+        width: 100%;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .hora {
+        color: gray;
+    }
+
+    .usuario {
+        color: black;
+    }
+
+    .status {
+        color: brown;
     }
 
 
