--- a/estilo.css
+++ b/estilo.css
@@ -59,7 +59,10 @@
     }
 
     .mensagem {
+        width: 100%;
+        height: 150vw;
         margin-top: 25vw;
+        overflow-y: scroll;
     }
 
     .mensagem-status {
@@ -89,7 +92,6 @@
         border-radius: .5vw;
         display: flex;
         padding: 3vw 3vw 2vw 2vw;
-
     }
 
     .ocultar {
