--- a/estilo.css
+++ b/estilo.css
@@ -46,8 +46,9 @@
         background-color: #FFFFFF;
     }
 
-    .rodape>ion-icon {
+    .icone {
         position: fixed;
+        bottom:0;
         right: 0;
         padding: 5vw;
         width: 8vw;
@@ -60,12 +61,12 @@
 
     .mensagem {
         width: 100%;
-        height: 150vw;
+        height: 100%;
         margin-top: 25vw;
         overflow-y: scroll;
     }
 
-    .mensagem-status {
+    /*.mensagem-status {
         height: 12vw;
         background-color: #DCDCDC;
         border-radius: .5vw;
@@ -93,7 +94,7 @@
         display: flex;
         padding: 3vw 3vw 2vw 2vw;
     }
-
+*/
     .ocultar {
         visibility: hidden;
     }
